Introduce Modernizer and fix violations